<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="?attr/background"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/password_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:maxLines="1"
            android:paddingBottom="30dp"
            android:paddingTop="16dp"
            android:textAllCaps="true"
            android:textColor="?attr/colorAccent"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password_circle_1"
                style="@style/PasswordInputStyle"
                android:labelFor="@+id/password_circle_1">

                <requestFocus />

            </EditText>

            <EditText
                android:id="@+id/password_circle_2"
                style="@style/PasswordInputStyle"
                android:labelFor="@+id/password_circle_2" />

            <EditText
                android:id="@+id/password_circle_3"
                style="@style/PasswordInputStyle"
                android:labelFor="@+id/password_circle_3" />

            <EditText
                android:id="@+id/password_circle_4"
                style="@style/PasswordInputStyle"
                android:labelFor="@+id/password_circle_4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/button_1"
                    style="@style/PasswordButtonStyle"
                    android:text="@string/number_1" />

                <Button
                    android:id="@+id/button_2"
                    style="@style/PasswordButtonStyle"
                    android:text="@string/number_2" />

                <Button
                    android:id="@+id/button_3"
                    style="@style/PasswordButtonStyle"
                    android:text="@string/number_3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/button_4"
                    style="@style/PasswordButtonStyle"
                    android:text="@string/number_4" />

                <Button
                    android:id="@+id/button_5"
                    style="@style/PasswordButtonStyle"
                    android:text="@string/number_5" />

                <Button
                    android:id="@+id/button_6"
                    style="@style/PasswordButtonStyle"
                    android:text="@string/number_6" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/button_7"
                    style="@style/PasswordButtonStyle"
                    android:text="@string/number_7" />

                <Button
                    android:id="@+id/button_8"
                    style="@style/PasswordButtonStyle"
                    android:text="@string/number_8" />

                <Button
                    android:id="@+id/button_9"
                    style="@style/PasswordButtonStyle"
                    android:text="@string/number_9" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/button_clear"
                    style="@style/PasswordButtonStyle"
                    app:srcCompat="@drawable/password_input_icon_clear"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/button_0"
                    style="@style/PasswordButtonStyle"
                    android:text="@string/number_0" />

                <ImageButton
                    android:id="@+id/button_erase"
                    style="@style/PasswordButtonStyle"
                    app:srcCompat="@drawable/password_input_icon_delete"
                    tools:ignore="ContentDescription" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</ScrollView>